package com.github.kokasumi.design.principles.lsp.cs;

/**
 * @version v1.0
 * @author: lg
 * @date: 2022/10/17 0:26
 * @description 枪支抽象类
 * @since v1.0
 */
public abstract class AbstractGun {
    /**
     * 射击
     */
    public abstract void shoot();
}
