package com.github.kokasumi.design.principles.lsp.cs.counter;

import com.github.kokasumi.design.principles.lsp.cs.AbstractGun;

/**
 * @version v1.0
 * @author: lg
 * @date: 2022/10/17 0:56
 * @description 玩具枪
 * @since v1.0
 */
public class ToyGun extends AbstractGun {
    @Override
    public void shoot() {

    }
}
